PodSecurityPolicy/allowedCapabilities/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8SPSPCapabilities
metadata:
  name: capabilities-demo
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    allowedCapabilities: ["something"]
    requiredDropCapabilities: ["must_drop"]
